# ConsoleParser

./: CMakeLists.txt  Makefile
headers/: ConsoleParser.h
src/: ConsoleParser.cpp  main.cpp
